examples/test/testpolicy14217.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14217
  namespace: namespace25
spec:
  podSelector:
    matchLabels:
      key12: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value27
          key15: value20
          key17: value45
      podSelector:
        matchLabels:
          key29: value19
